2008-3-16 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/test_case.rb:

	Added a test case mixin which sets up a test case for a controller and defines helper methods and creates stubs for all ib_outlets that are defined in the controller.

2008-3-14 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/Rakefile.erb,
	  lib/rucola/tasks/main.rake:

	- When deploying, start the application after building to test if the application runs before actually deploying.
	- Comment the URI suggestions in an applications Rakefile.

2008-3-10 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/Rakefile.erb,
	  lib/rucola/tasks/dependencies.rake,
	  lib/rucola/tasks/deploy.rake,
	  lib/rucola/tasks/main.rake,
	  lib/rucola/tasks/xcode.rake:

	- Running the release rake task will automatically check if libs need to be bundled from the environments/release.rb file.
	- Added a deploy:release_notes task which looks for textile files in ReleaseNotes/AppName_Version.
	- The deploy:upload task now also uploads the release notes file.

2008-3-10 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/Rakefile.erb,
	  app_generators/rucola/templates/config/environment.rb,
	  lib/rucola/reloader.rb,
	  lib/rucola/tasks/deploy.rake,
	  test/test_log.rb:

	- Added a deploy:upload task which atm can upload via scp.
	  (Implementing the possibility to use other schemes should be fairly simple.)
	- Cleaned up the Log tests.
	- Cleaned up the Reloader to use the new Log.

2008-3-10 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/Rakefile.erb,
	  app_generators/rucola/templates/config/boot.rb,
	  app_generators/rucola/templates/config/environments/debug.rb,
	  app_generators/rucola/templates/config/environments/release.rb,
	  app_generators/rucola/templates/config/environments/test.rb,
	  app_generators/rucola/templates/misc/rb_main.rb.erb,
	  lib/rucola/dependencies.rb,
	  lib/rucola/initializer.rb,