@@ -1,26 +1,37 @@
 require File.expand_path('../../test_helper', __FILE__)
 
 describe '<%= name.camel_case %>Controller' do
-  before do
-    @controller = <%= name.camel_case %>Controller.alloc.init
-    
-    # If this is a window controller belonging to a document model,
-    # then this will allow you to mock the document.
-    #
-    # @document = mock('Document')
-    # @controller.stubs(:document).returns(@document)
-  end
-
+  tests <%= name.camel_case %>Controller
+  
+  # If necessary, you can setup custom objects for the ib_outlets defined in the class.
+  # Note however that by using 'tests <%= name.camel_case %>Controller' all the outlets will get stubbed
+  # with stubs that respond to every message with nil.
+  #
+  # def after_setup
+  #   ib_outlets :window => mock("Main Window"),
+  #              :tableView => OSX::NSTableView.alloc.init,
+  #              :searchField => OSX::NSSearchField.alloc.init
+  # 
+  #   window.stubs(:title => 'Main Window')
+  #   tableView.addTableColumn OSX::NSTableColumn.alloc.init
+  #   searchField.stringValue = "foo"
+  #
+  #   # If this is a window controller belonging to a document model,
+  #   # then this will allow you to mock the document.
+  #   # 
+  #   # @document = mock('Document')
+  # end
+  
   it "should initialize" do
-    @controller.should.be.an.instance_of <%= name.camel_case %>Controller
+    controller.should.be.an.instance_of <%= name.camel_case %>Controller
   end
   
   it "should do stuff at awakeFromNib" do
     # Some example code of testing your #awakeFromNib.
     #
     # @document.expects(:some_method).returns('foo')
-    # @controller.ib_outlet(:some_text_view).expects(:string=).with('foo')
+    # controller.ib_outlet(:some_text_view).expects(:string=).with('foo')
     
-    @controller.awakeFromNib
+    controller.awakeFromNib
   end
 end
